# WCPCI

./: .gitignore  Cargo.toml  Rocket.toml  flake.nix  garnix.yaml  justfile  nixos-testing.nix  old_nix_deployment.md
devShell/: Rocket.toml  config.toml  default.nix  local.env.template  secrets.template.toml
frontend/: astro.config.mjs  package-lock.json  package.json
frontend/src/components/: Button.astro  Collapse.astro  CopyButton.astro  Field.astro  Form.astro  ProblemRun.astro
frontend/src/components/base/: AlertBox.astro  Footer.astro  Head.astro  Header.astro
frontend/src/components/forms/: ContestForm.astro  ProblemForm.astro
frontend/src/components/table/: UserTable.astro
frontend/src/layouts/: Layout.astro
frontend/src/lib/: editor.ts  editorFeatures.ts  editorLanguages.ts  problem_ws.ts
frontend/src/pages/: index.astro  md_help.astro  profile.astro  users.astro
frontend/src/pages/admin/: index.astro
frontend/src/pages/contests/: export.astro  leaderboard.astro  view.astro
frontend/src/pages/problems/: import.astro  index.astro  runs.astro  view.astro
frontend/src/styles/: cm-theme.scss  style.scss
migrations/: 20240309192308_init.sql
nix/: backend.nix  container.nix  frontend.nix  shell.nix  wrapper.nix
nix-template/: rocket_config.nix
pkgs/: oxidejudge_config.nix  rocket_config.nix  wrapper.nix
pkgs/backend/: Cargo.toml  default.nix
pkgs/backend/migrations/: 20240309192308_init.sql
pkgs/backend/src/: db.rs  main.rs  messages.rs  serve.rs  template.rs  times.rs
pkgs/backend/src/admin/: mod.rs  runs.rs  users.rs
pkgs/backend/src/auth/: github.rs  google.rs  saml.rs  users.rs
pkgs/backend/src/branding/: colors.rs  icon.rs  mod.rs  robots.txt
pkgs/backend/src/contests/: delete.rs  edit.rs  join.rs  list.rs  new.rs  participant.rs  view.rs
pkgs/backend/src/leaderboard/: manager.rs  mod.rs  scoring.rs  ws.rs
pkgs/backend/src/problems/: completions.rs  delete.rs  edit.rs  new.rs
pkgs/backend/src/run/: RUNNER.md  manager.rs
pkgs/backend/src/settings/: account.rs  contest.rs  delete.rs  mod.rs  profile.rs
pkgs/frontend/: .gitignore  astro.config.mjs  cspOutputer.mjs  default.nix  package-lock.json  tailwind.config.mjs  tsconfig.json
pkgs/frontend/src/components/: Avatar.astro  BreadCrumb.astro  CaseIndicator.astro  Connection.astro  CopyButton.astro  Form.astro  Label.astro  Link.astro  PlaceIndicator.astro  Progress.astro  Spinner.astro  Tile.astro  Title.astro
pkgs/frontend/src/layouts/: ContestLayout.astro  Layout.astro  Settings.astro
pkgs/frontend/src/lib/: countdown.ts  editor.ts  editorFeatures.ts  editorHighlightTheme.ts  editorLanguages.ts  highlighting.ts  leaderboard_ws.ts  math.ts  tera.ts  (+2 more)
src/: csp.rs  error.rs  main.rs  profile.rs  serve.rs  template.rs
src/admin/: users.rs
src/auth/: csrf.rs  mod.rs  saml.rs  sessions.rs  users.rs
src/branding/: browserconfig.xml  colors.rs  image.rs  meta.rs  mod.rs
src/contests/: edit.rs  join.rs  judge.rs  mod.rs  new.rs  team.rs  view.rs
src/contests/admin/: completions.rs  mod.rs  participants.rs  runs.rs
src/contests/git/: commit.rs  mod.rs  object.rs
src/leaderboard/: manager.rs  mod.rs  scoring.rs
src/problems/: cases.rs  completions.rs  delete.rs  edit.rs  mod.rs  new.rs  runs.rs  view.rs
src/problems/io/: import.rs  mod.rs
src/run/: RUNNER.md  config.rs  job.rs  languages.rs  lockdown.rs  manager.rs  mod.rs  runner.rs  seccomp.rs  syscalls.rs  worker.rs  ws.rs
src/run/isolation/: chroot.rs  config.rs  environment.rs  id_map.rs  mod.rs  mounts.rs  seccomp.rs  unshare.rs  user.rs
src/run/worker/: mod.rs  service_side.rs  test_shell.rs  worker_side.rs
(+74 files in other folders)
