[package]
name = "wcpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.35", default-features = false, features = ["serde", "std", "now"] }
chrono-tz = { version = "0.9.0", features = ["serde"] }
color-art = "0.3.8"
dotenvy = "0.15.7"
flate2 = { version = "1.0.30" }
image = { version = "0.25.2", default-features = false, features = ["png", "ico", "webp", "avif", "rayon"] }
log = "0.4.21"
markdown = "1.0.0-alpha.16"
nix = { version = "0.29.0", features = ["sched", "mount", "process", "user", "fs", "signal"] }
openssl = "0.10.64"
rand = "0.8.5"
regex = "1.10.3"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "json"] }
rocket = { version = "0.5.1", features = ["json", "tls"] }
rocket_async_compression = "0.6.0"
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rocket_oauth2 = "0.5.0"
rocket_ws = "0.1.0"
rustc_version_runtime = "0.3.0"
samael = { version = "0.0.17", features = ["xmlsec"] }
seccompiler = { version = "0.4.0", features = ["json", "serde", "serde_json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha1 = "0.10.6"
sha256 = "1.5.0"
slug = "0.1.5"
sqlx = { version = "0.7.0", features = ["migrate", "chrono"] }
tera = "1.19.1"
tokio = { version = "1.36.0", features = ["process"] }
tokio-util = "0.7.11"
urlencoding = "2.1.3"

[profile.release]
codegen-units = 1
lto = true
strip = true
