[package]
name = "wcpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.35", default-features = false, features = [
	"serde",
	"std",
	"now",
] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
color-art = "0.3.9"
dotenvy = "0.15.7"
flate2 = { version = "1.1.2" }
image = { version = "0.25.6", default-features = false, features = [
	"png",
	"ico",
	"webp",
	"avif",
	"rayon",
] }
log = "0.4.27"
markdown = "1.0.0"
nix = { version = "0.30.1", features = [
	"sched",
	"mount",
	"process",
	"user",
	"fs",
	"signal",
] }
openssl = "0.10.73"
rand = "0.9.2"
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = [
	"rustls-tls",
	"json",
] }
rocket = { git = "https://github.com/rwf2/Rocket", branch = "master", features = ["json", "tls"] }
rocket_async_compression = { git = "https://github.com/dignifiedquire/rocket_async_compression" }
rocket_db_pools = { git = "https://github.com/rwf2/Rocket", branch = "master", features = [
	"sqlx_sqlite",
] }
rocket_dyn_templates = { git = "https://github.com/rwf2/Rocket", branch = "master", features = [
	"tera",
] }
rocket_oauth2 = { git = "https://github.com/Bwc9876/rocket_oauth2" }
rocket_ws = { git = "https://github.com/rwf2/Rocket", branch = "master" }
rustc_version_runtime = "0.3.0"
samael = { version = "0.0.19", features = ["xmlsec"] }
seccompiler = { version = "0.5.0", features = ["json", "serde", "serde_json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha1 = "0.10.6"
sha256 = "1.6.0"
slug = "0.1.6"
sqlx = { version = "0.8.6", features = ["migrate", "chrono"] }
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["process", "io-std"] }
tokio-util = "0.7.16"
urlencoding = "2.1.3"

[profile.release]
codegen-units = 1
lto = true
strip = true
